--- a/ball/settings/project.json
+++ b/ball/settings/project.json
@@ -29,13 +29,13 @@
     "wall",
     "ball"
   ],
-  "last-module-event-record-time": 0,
+  "last-module-event-record-time": 1567494395883,
   "simulator-orientation": false,
   "simulator-resolution": {
     "height": 640,
     "width": 960
   },
+  "start-scene": "current",
   "use-customize-simulator": true,
-  "use-project-simulator-setting": false,
-  "start-scene": "current"
+  "use-project-simulator-setting": false
 }
